@startuml 19-clases-aplicacion-saga-secundaria1
title Aplicación — saga secundaria 1 (business.sagas.aplicacion.servicio.sagasecundaria1): ServicioSagaSecundaria1 y sus puertos
!pragma layout smetana
hide empty members
skinparam classAttributeIconSize 0

interface "ProcesadorOrden (ver 17)" as Base

class ServicioSagaSecundaria1 <<@Service>> {
  -repo : RepositorioOrden
  -lease : Duration
  -puerto : PuertoSagaSecundaria1
  -self : ServicioSagaSecundaria1  «proxy auto-inyectado, @Lazy\n(ver ConfiguracionSagas); establecerSelf(self)»
  +tipo() : TipoOrden  «SagaSecundaria1.TIPO»
  +ejecutarPaso(orden) : SenalPaso
  +aplicar(orden, saga, resultado) : SenalPaso  «@Transactional»
  -ejecutarComando(ComandoPaso) : ResultadoPasoSecundaria1  «switch: Iniciar->puerto.iniciar,\nConfirmar->puerto.confirmar»
}
note right of ServicioSagaSecundaria1
  ejecutarPaso: recibe el agregado YA CARGADO por
  ServicioContinuarOrden (ver 17); castea orden.proceso() a
  SagaSecundaria1, comandoActual() + REST fuera de tx, luego
  self.aplicar(...) -- vía proxy, para que @Transactional no se
  ignore por auto-invocación -- guarda esa misma instancia de
  OrdenRoot sin recargar: SagaSecundaria1 es un VO inmutable (ver
  16), así que aplicar hoistea un único var ahora = Instant.now()
  y captura nuevaSaga = saga.aplicarYAvanzar(resultado)
  y hace orden.reemplazarProceso(nuevaSaga, ahora) ANTES de mirar
  nuevaSaga.terminada() (si terminada() -> finalizar(ahora),
  si no -> resetearIntentos(ahora)+renovarLease(lease, ahora)); si otro actor escribió
  entre medias, guardar falla por version. Sin comprobación de
  estado de compensación (a diferencia de la principal): nunca se
  cancela ni compensa.
end note

package "puerto.salida" {
  interface "RepositorioOrden\n(business.ordermanager — ver 17)" as RepositorioOrden
  interface PuertoSagaSecundaria1 {
    +iniciar(cmd) : Iniciada(refInicio)
    +confirmar(cmd) : Confirmada(refConfirmacion)
    «dos métodos REST del mismo servicio»
  }
}

Base <|.. ServicioSagaSecundaria1
ServicioSagaSecundaria1 --> RepositorioOrden
ServicioSagaSecundaria1 --> PuertoSagaSecundaria1 : REST síncrono (fuera de la tx)
@enduml
